ui init for new backend code

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
@@ -19,6 +19,9 @@ div[data-app-endpoints-details-response-request]
           color: #ffffff
     div.samples > h2
       margin-top: $section-margin-bottom
+    div.resp-body
+      > h2
+        margin-top: $h-margin-bottom * 2
     div.values
       margin-top: $h-margin-bottom
       padding-bottom: 20px
