--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
@@ -52,6 +52,7 @@ a
 @import "component_editable"
 @import "component_editable_option"
 @import "component_editable_block"
+@import "component_editable_md"
 @import "component_switch"
 @import "component_multiselect"
 @import "component_tabs"
