grow list of endpoints if space available

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints.sass
@@ -10,6 +10,7 @@ div[data-app-endpoints]
         flex-direction: column
       div.list
         position: relative
+        flex-grow: 1
         > div:first-of-type
           position: absolute
           left: 0
