matching latest mockups

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
@@ -21,7 +21,7 @@ div[data-app-endpoints-details-response-request]
       margin-top: $section-margin-bottom
     div.resp-body
       > h2
-        margin-top: $h-margin-bottom * 2
+        margin: $h-margin-bottom 0 0 0
     div.values
       margin-top: $h-margin-bottom
       padding-bottom: 20px
