--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_md.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_md.sass
@@ -3,6 +3,8 @@
 div[data-tribe-editable-md]
   > div
     position: relative
+    border: solid 1px transparent
+    min-height: 32px
     .icon
       display: none
       position: absolute
@@ -11,6 +13,7 @@ div[data-tribe-editable-md]
       right: 0
       width: 20px
       background-color: #eff0f1
+      opacity: 1
       > div
         display: flex
         flex-direction: column
@@ -24,16 +27,28 @@ div[data-tribe-editable-md]
       min-height: 30px
       height: auto
       border-color: transparent
+    div.empty
+      padding-left: 5px
+      height: 30px
+      display: flex
+      justify-content: center
+      flex-direction: column
+      span
+        font-style: italic
+        color: #d9d4d7 !important
+        font-weight: 600 !important
     div.dyn
       display: none
   &.edit
     > div
+      div.empty
+        display: none
       div.static
         display: none
       div.dyn
         display: block
   &:hover
-    .CodeMirror
+    > div
       border-color: #f2f0f0
     .icon
       display: block
