--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_option.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_option.sass
@@ -4,6 +4,7 @@ $color: #f2f0f0
 
 i[data-tribe-editable-option]
   $radius: 3px
+  font-style: normal
   > div
     outline: none
     display: inline-block
