matching latest mockups

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_resource_information.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_resource_information.sass
@@ -114,6 +114,9 @@ div[data-app-endpoints-details-resource-information]
                 margin-left: 10px
                 > i
                   color: #ffffff
+            i + span
+              margin-left: 5px
+
           &.auth-method
             > div
               > div
