--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
@@ -45,6 +45,7 @@ div
             span concurrent requests
           div(x-ng-click="removeAppRate()")
             i.fa.fa-trash
+    div
       .user-rates(data-submenu="true", app-endpoints-details-toc-anchor="User rates")
         div
           span User rates
