--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_option.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_option.sass
@@ -5,11 +5,16 @@ $color: #f2f0f0
 i[data-tribe-editable-option]
   $radius: 3px
   font-style: normal
+  span.empty
+    font-style: italic
+    font-size: 12px
+    color: #d9d4d7 !important
+    font-weight: 600 !important
   > div
     outline: none
     display: inline-block
   .value
-    padding: 5px 12px 5px 8px
+    padding: 5px 20px 5px 8px
     position: relative
     border: solid transparent 1px
     border-radius: $radius
