--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_editable_option.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_editable_option.jade
@@ -5,6 +5,6 @@ div(tabindex=0)
     div
       i.fa.fa-caret-up
       i.fa.fa-caret-down
-  .options
+  .options.floating-menu
     div(x-ng-repeat="opt in options", x-ng-click="selectOption(opt)", tabindex=0)
       span {{opt.text ? opt.text : opt}}
