table fields width 100%

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_parameters.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_parameters.sass
@@ -72,6 +72,12 @@ div[data-app-endpoints-details-parameters]
               > div
                 display: flex
                 flex-direction: column
+          td
+            padding: 5px 0 0 0
+          td
+            > i
+              > div
+                width: 100%
           tr:hover
             td
               &:last-of-type
