--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable.sass
@@ -9,7 +9,6 @@ i[data-tribe-editable-text], i[data-tribe-editable-number]
     outline: none
   > div
     display: inline-block
-    min-width: 8px !important
     border: solid transparent 1px
     input
       width: 100%
@@ -39,14 +38,16 @@ i[data-tribe-editable-text], i[data-tribe-editable-number]
 i[data-tribe-editable-text], i[data-tribe-editable-number]
   > div
     position: relative
+    $width: 20px
+    min-width: $width * 2
     > div
       display: none
       position: absolute
       z-index: 1000
-      right: -20px
+      right: 0
       top: -1px
       bottom: -1px
-      width: 20px
+      width: $width
       background-color: #eff0f1
       flex-direction: column
       justify-content: center
