expected params list

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
@@ -22,7 +22,7 @@ div[data-app-endpoints-details-response-request]
     div.resp-body
       > h2
         margin: $h-margin-bottom 0 0 0
-    div.values
+    div.values, div.expected
       margin-top: $h-margin-bottom
       padding-bottom: 20px
       border-bottom: dashed $app-input-border-color 1px
