--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_md.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_md.sass
@@ -3,8 +3,9 @@
 div[data-tribe-editable-md]
   > div
     position: relative
-    border: solid 1px transparent
+    border: solid 1px #f2f0f0
     min-height: 32px
+    padding: 5px
     .icon
       display: none
       position: absolute
