--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_parameters.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_parameters.sass
@@ -36,11 +36,13 @@ div[data-app-endpoints-details-parameters]
             background-color: #f9f9f9
             th
               text-align: left
-              padding: 5px 8px
-            span
-              text-transform: uppercase
-              font-weight: 700 !important
+              background-color: #f8f9fa
               color: #000000
+              padding: 5px
+              text-transform: uppercase
+              font-size: 15px
+              font-weight: 600 !important
+
           th, td
             $column-width: 120px
             width: $column-width
