--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_header.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_header.jade
@@ -10,4 +10,5 @@ div
     h2(app-endpoints-details-toc-anchor="Resource URL") Resource URL
     div
       i(data-tribe-editable-option, data-value="endpointProtocol", data-options="['http', 'https']")
+      span ://
       a(x-ng-href="{{endpointProtocol + resourceUrl}}") {{resourceUrl}}
