auto adjust width component attribute

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
@@ -44,6 +44,10 @@ div[data-app-endpoints-details-response-request]
         > i
           > div
             width: 100%
+        > i[data-tribe-editable-text]
+          input
+            width: 100%
+
       td:last-of-type
         > div
           display: none
