option padding visible and hover

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
@@ -22,6 +22,9 @@ div[data-app-endpoints-details-header]
             input, span
               color: #000000
         > i[data-tribe-editable-option]
+          &.visible
+            div.value
+              padding-right: 20px
           div.value
             padding-right: 8px
             span
@@ -54,6 +57,9 @@ div[data-app-endpoints-details-header]
       margin-top: 15px
       > div
         > i[data-tribe-editable-option]
+          &.visible
+            div.value
+              padding-right: 20px
           div.value
             padding-right: 0
             &:hover
