--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details.sass
@@ -47,6 +47,11 @@ div[data-app-endpoints-details]
         text-decoration: none
         &:hover
           text-decoration: underline
+      > div.actions
+        flex-grow: 1
+        display: flex
+        align-items: center
+        flex-direction: row-reverse
     // body
     > div:last-of-type
       position: absolute
