plus button size

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_resource_information.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_resource_information.sass
@@ -73,7 +73,7 @@ div[data-app-endpoints-details-resource-information]
                 color: $text-color
               > div
                 background-color: #d6d6d6
-                padding: 2px 8px
+                padding: 0 5px
                 margin-left: 10px
                 > i
                   color: #ffffff
@@ -110,7 +110,7 @@ div[data-app-endpoints-details-resource-information]
                 font-size: $app-font-size-h3
               > div
                 background-color: #d6d6d6
-                padding: 2px 8px
+                padding: 0 5px
                 margin-left: 10px
                 > i
                   color: #ffffff
