--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
@@ -13,7 +13,7 @@ div[data-app-endpoints-details-response-request]
         text-transform: uppercase
       > div
         background-color: #d6d6d6
-        padding: 2px 8px
+        padding: 0 5px
         margin-left: 10px
         > i
           color: #ffffff
