--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_multiselect.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_multiselect.sass
@@ -97,7 +97,7 @@ i[data-tribe-multiselect]
               border-radius: 2px
               border: solid 1px $color
               background-color: $color
-              padding: 2px 8px
+              padding: 0 5px
               margin: 2px
               display: inline-block
               &:hover
