--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_parameters.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_parameters.sass
@@ -19,7 +19,7 @@ div[data-app-endpoints-details-parameters]
         text-transform: uppercase
       > div.add-param
         background-color: #d6d6d6
-        padding: 2px 8px
+        padding: 0 5px
         margin-left: 10px
         > i
           color: #ffffff
