fix resource url

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_md.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_md.sass
@@ -1,6 +1,8 @@
 @import "variables"
 
 div[data-tribe-editable-md]
+  strong
+    font-weight: inherit !important
   > div
     position: relative
     border: solid 1px #f2f0f0
