--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_header.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_header.jade
@@ -11,4 +11,4 @@ div
     div
       i(data-tribe-editable-option, data-value="endpointProtocol", data-options="['http', 'https']")
       span ://
-      a(x-ng-href="{{endpointProtocol + resourceUrl}}") {{resourceUrl}}
+      a(x-ng-href="{{endpointProtocol + '://' + resourceUrl}}") {{resourceUrl}}
