editable link component 'see' section

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable.sass
@@ -18,6 +18,10 @@ i[data-tribe-editable-text], i[data-tribe-editable-number]
     max-width: 100%
     > span
       white-space: nowrap
+      &.empty
+        font-style: italic
+        font-size: 12px
+        color: #d9d4d7 !important
     > input
       display: none
       max-width: 100%
