--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
@@ -66,6 +66,7 @@ a
 @import "component_editable_option"
 @import "component_editable_block"
 @import "component_editable_md"
+@import "component_editable_link"
 @import "component_switch"
 @import "component_multiselect"
 @import "component_tabs"
