--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_see.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_see.sass
@@ -4,10 +4,51 @@
 div[data-app-endpoints-details-see]
   > div
     max-width: $app-max-width
-    display: flex
     margin-top: 10px
+    display: flex
+    flex-direction: column
+    align-items: flex-start
+    > ul
+      margin: 0
+      list-style: none
+      > li
+        display: flex
+        align-items: center
+        > div
+          display: none
+          background-color: #d6d6d6
+          padding: 0 5px
+          margin-left: 10px
+          &:hover
+            cursor: pointer
+          > i
+            color: #ffffff
+            margin: 0
+            font-size: 10px
+        &:hover
+          > div
+            display: block
+
     > div
-      margin-right: 10px
-    > p
+      display: flex
+      align-items: center
       > span
-        margin-right: 5px
+        text-transform: uppercase
+        font-weight: 700 !important
+        font-size: 18px
+        color: #000
+      > div
+        display: flex
+        flex-direction: column
+        align-items: center
+        justify-content: center
+        background-color: #d6d6d6
+        padding: 5px
+        margin-left: 10px
+        &:hover
+          cursor: pointer
+        > i
+          color: #ffffff
+          margin: 0
+          font-size: 10px
+
