editable link component

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_parameters.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_parameters.jade
@@ -18,7 +18,7 @@ div
             td
               i(data-tribe-editable-text, data-value="param.name")
             td
-              i(data-tribe-editable-option, data-value="param.style", data-options="['template', 'query']")
+              i(data-tribe-editable-option, data-value="param.style", data-options="['path', 'query']")
             td
               i(data-tribe-editable-option, data-value="param.required", data-options="[{text: 'Yes', value: true}, {text: 'No', value: false}]")
             td.description
