--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
@@ -5,8 +5,8 @@ div
       div(data-submenu="true", app-endpoints-details-toc-anchor="API Versions")
         span API Versions
         i(data-tribe-multiselect, data-selected-options="endpoint.metadata.apiVersions")
-      div(data-submenu="true", app-endpoints-details-toc-anchor="Service status")
-        span Service status
+      div(data-submenu="true", app-endpoints-details-toc-anchor="Status")
+        span Status
         i(data-tribe-editable-option, data-value="status", data-options="statusOptions")
     div
       div(data-submenu="true", app-endpoints-details-toc-anchor="Request formats")
