Fixed display of example responses. Nailed to xml response for the demo.

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
@@ -50,12 +50,12 @@ div
               i.fa.fa-trash-o
   .samples
     h2 #[span Request Headers]
-    div(data-tribe-editable-md, data-content="endpoint.samples.requestHeaders")
+    div(data-tribe-editable-block, data-content="endpoint.samples.requestHeaders")
     h2 #[span Response Parameters]
-    div(data-tribe-editable-md, data-content="endpoint.samples.responseParameters")
+    div(data-tribe-editable-block, data-content="endpoint.samples.responseParameters")
 
 
     h2 #[span Response Body]
-    div(data-tribe-editable-md, data-content="endpoint.samples.responseBody")
+    div(data-tribe-editable-block, data-content="endpoint.samples.sampleXmlResponse")
     h2 #[span Response Body Sample Error]
-    div(data-tribe-editable-md, data-content="endpoint.samples.responseBodyError")
+    div(data-tribe-editable-block, data-content="endpoint.samples.defaultSampleXmlResponse")
