REG-96 using black instead of gray.

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_common_components.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_common_components.sass
@@ -23,12 +23,12 @@ select, input
 
 input, select
   max-width: 600px
-  color: #676A6C
+  color: $app-black
 
 label
   font-size: 13px
   font-weight: bold
-  color: #676A6C
+  color: $app-black
   display: flex
   align-items: center
   margin-bottom: 5px
