--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_variables.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_variables.sass
@@ -23,7 +23,7 @@ $mobile-threshold: 500px
 $wrap-threshold: 800px
 $app-button-color: #3B5164
 $app-filter-bubble-color: #62A8D1
-$app-black: #676a6c
+$app-black: #000000
 $app-white: #ffffff
 $app-cancel-button-color: darken(#E9ECEF, 10%)
 $app-cancel-button-active-color: darken($app-cancel-button-color, 20%)
