REG-96 using black instead of gray.

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_multiselect.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_multiselect.sass
@@ -30,7 +30,7 @@ i[data-tribe-multiselect]
         max-height: 200px
         overflow: auto
         span
-          color: #a2b2bd
+          color: $app-black
         > div.empty
           padding: 0 8px
           > span
@@ -80,7 +80,7 @@ i[data-tribe-multiselect]
             cursor: pointer
             background-color: $app-white
             > div > i
-              color: #a2b2bd
+              color: $app-black
 
         &:last-of-type // selected options
           border-radius: 3px 0 0 3px
@@ -104,7 +104,7 @@ i[data-tribe-multiselect]
                 cursor: pointer
               > span
                 margin-right: 5px
-                color: #a2b2bd
+                color: $app-black
                 font-size: 11px
               > i
                 color: white
