--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
@@ -18,7 +18,7 @@ div
     div
       div.auth-method(data-submenu="true", app-endpoints-details-toc-anchor="Authentication method")
         span Authentication method
-        i(data-tribe-multiselect, data-selected-options="authMethod", data-single-select="true")
+        i(data-tribe-multiselect, data-available-options="['basic', 'form', 'digest', 'HTTP Signatures', 'Bearer']", data-selected-options="authMethod")
       div(data-submenu="true", app-endpoints-details-toc-anchor="Roles")
         span Roles
         i(data-tribe-multiselect, data-selected-options="endpoint.roles")
