--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
@@ -7,7 +7,7 @@ div
         i(data-tribe-multiselect, data-selected-options="endpoint.metadata.apiVersions")
       div(data-submenu="true", app-endpoints-details-toc-anchor="Service status")
         span Service status
-        i(data-tribe-editable-option, data-value="status", data-options="statusOptions")
+        i(data-tribe-editable-option, data-value="endpoint.metadata.status", data-options="statusOptions")
     div
       div(data-submenu="true", app-endpoints-details-toc-anchor="Request formats")
         span Request formats
