align endpoint details header title

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_link.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_link.sass
@@ -12,6 +12,7 @@ i[data-tribe-editable-link], div[data-tribe-editable-link]
       span.empty
         font-style: italic
         font-size: 12px
+        font-weight: 700 !important
         color: #d9d4d7 !important
       div.edit-trigger
         margin-left: 10px
