--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
@@ -17,8 +17,12 @@ div[data-app-endpoints-details-header]
         transform: translate(-10px, 0)
         margin: 0
         padding: 0
+        display: flex
+        align-items: center
         > i[data-tribe-editable-text]
+          flex-grow: 1
           > div
+            width: 100%
             input, span
               color: #000000
         > i[data-tribe-editable-option]
