REG-13 preparing create endpoint button

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_header.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_header.sass
@@ -39,3 +39,6 @@ div[data-app-endpoints-header]
         align-self: stretch
       flex-grow: 1
       max-width: 400px
+      &:last-of-type
+        @media (max-width: $wrapping-width)
+          margin-top: 10px
