--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
@@ -78,6 +78,7 @@ a
 
 @import "app_endpoints"
 @import "app_endpoints_header"
+@import "app_endpoints_header_create_btn"
 @import "app_endpoints_query_input"
 @import "app_endpoints_list"
 @import "app_endpoints_list_filter_entries"
