--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_header.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_header.jade
@@ -4,3 +4,4 @@ div
     span Services found
     span ({{total}})
   i(data-app-endpoints-query-input)
+  i(data-app-endpoints-header-create-btn, data-endpoints="endpoints")
